--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,23 @@
     <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <style>
+        @media (max-width : 575px) {
+            .hei{
+                height: 500px;
+            }
+        }
+        @media (min-width : 968px) {
+            .hei{
+                height: 300px;
+            }
+        }
+        @media (min-width : 1200px) {
+            .hei{
+                height: 225px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header class="bg-dark">
@@ -44,8 +61,8 @@
                     
                 </div>
                 <div class="row">
-                    <div class="col-10" id="cartPro"></div>
-                    <div class="col-2">
+                    <div class="col-lg-10 col-12" id="cartPro"></div>
+                    <div class="col-lg-2 col-12">
                         <div class="col-12 py-2">
                             <div class="border border-5 rounded-2">
                                 <h4 class="px-3 pt-3 col-12">Total Amount:</h4>
